# Liebeskind

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  NoRttiOrExceptions.cmake  README.md  TODO.md  app.js  appconfig.js  build.bat  compile.bat  compile.sh  package-lock.json  package.json  run.bat  run.sh  tasks.md
bundled/: imgui.ini
commands/: autofill.js  check.js  createLeague.js  endLeague.js  help.js  info.js  join.js  linkCF.js  quickstart.js  register.js  self.js  startLeague.js  update.js
scenes/: bedroom.json  sponza.json  test_scene.json
src/: CMakeLists.txt  main.cpp  main.cpp.orig
src/engine/: CMakeLists.txt  CopyFile.cmake
src/engine/include/: engine.h
src/engine/include/core/algo/: event_system.h  generation_index_array.cpp  generation_index_array.h  type_id.h
src/engine/include/core/file_system/: file.h
src/engine/include/core/logger/: assert.h  logger.h  vulkan_ensures.h
src/engine/include/core/math/: transform.h
src/engine/include/file_system/: file.h
src/engine/include/game_specific/cameras/: camera.h  fixed_follow_camera.h  module.h  perspective_camera.h
src/engine/include/game_world/: static_objects.h  world.h  world_module.h
src/engine/include/logger/: assert.h  logger.h
src/engine/include/low_level_renderer/: _impl_drawing.h  bloom.h  blur.h  camera.h  config.h  data_buffer.h  descriptor_allocator.h  descriptor_write_buffer.h  gpu_scene_data.h  graphics_device_interface.h  graphics_module.h  graphics_user_interface.h  instance_rendering.h  material_manager.h  material_pipeline.h  materials.h  mesh.h  mesh_manager.h  meshes.h  pipeline_template.h  post_processing.h  queue_family.h  radiance_cascade.h  render_pass_data.h  render_submission.h  renderpass_data.h  sampler.h  shader_data.h  shader_manager.h  shaders.h  storage_buffer.h  swapchain_data.h  texture.h  transformation.h  uniform_buffer.h  vertex_buffer.h
src/engine/include/resource_management/: material_manager.h  mesh_manager.h  model_manager.h  obj_loader.h  resource_manager.h  shader_manager.h  texture_manager.h
src/engine/include/save_load/: json_serializer.h  serialized_world.h  serializer.h  world_loader.h
src/engine/include/scene_graph/: module.h  scene_drawer.h
src/engine/models/: ChibiPippa.mtl
src/engine/shaders/: bloom.frag.glsl  bloom_combine.frag.glsl  bloom_downsample.frag.glsl  bloom_upsample.frag.glsl  entire_screen.vert.glsl  jump_flood.comp.glsl  kawase_blur.frag.glsl  post_processing.frag.glsl  scene_voxelizer.frag.glsl  scene_voxelizer.geom.glsl  scene_voxelizer.vert.glsl  test_triangle.frag.glsl  test_triangle.vert.glsl  test_triangle_instanced.vert.glsl
src/engine/src/: CMakeLists.txt  engine.cpp
src/engine/src/core/: CMakeLists.txt
src/engine/src/core/algo/: CMakeLists.txt  generation_index_array.cpp  type_id.cpp
src/engine/src/core/file_system/: CMakeLists.txt  file.cpp
src/engine/src/core/logger/: CMakeLists.txt  logger.cpp  logger.cpp.orig
src/engine/src/core/math/: CMakeLists.txt  transform.cpp
src/engine/src/file_system/: CMakeLists.txt  file.cpp
src/engine/src/game_specific/: CMakeLists.txt
src/engine/src/game_specific/cameras/: CMakeLists.txt  camera.cpp  module.cpp  perspective_camera.cpp
src/engine/src/game_world/: CMakeLists.txt  world.cpp
src/engine/src/logger/: CMakeLists.txt  logger.cpp
src/engine/src/low_level_renderer/: CMakeLists.txt  _impl_drawing.cpp  camera.cpp  data_buffer.cpp  descriptor_allocator.cpp  descriptor_write_buffer.cpp  graphics_device_interface.cpp  graphics_module.cpp  graphics_user_interface.cpp  instance_rendering.cpp  material_manager.cpp  material_pipeline.cpp  materials.cpp  mesh.cpp  mesh_manager.cpp  meshes.cpp  pipeline_template.cpp  queue_family.cpp  render_submission.cpp  renderpass_data.cpp  shader_manager.cpp  shaders.cpp  storage_buffer.cpp  swapchain_data.cpp  texture.cpp  texture_manager.cpp  uniform_buffer.cpp  vertex_buffer.cpp
src/engine/src/low_level_renderer/private/: bloom.cpp  bloom.h  buffer.cpp  buffer.h  buffer_templated.cpp  command.cpp  command.h  descriptor.cpp  descriptor.h  graphics_device_helper.cpp  graphics_device_helper.h  helpful_defines.h  image.cpp  image.h  pipeline.cpp  pipeline.h  queue_family.cpp  radiance_cascade.cpp  radiance_cascade.h  sampler.cpp  shader_helper.cpp  shader_helper.h  swapchain.cpp  swapchain.h  texture.cpp  validation.cpp  validation.h
src/engine/src/resource_management/: CMakeLists.txt  material_manager.cpp  mesh_manager.cpp  obj_loader.cpp  shader_manager.cpp  texture_manager.cpp
src/engine/src/save_load/: CMakeLists.txt  json_serializer.cpp  world_loader.cpp
src/engine/src/scene_graph/: CMakeLists.txt  module.cpp  scene_drawer.cpp
src/game/: CMakeLists.txt
src/game/include/: game.h  input_management.h
src/game/include/cameras/: debug_camera_controller.h  module.h
src/game/src/: game.cpp  input_management.cpp
src/game/src/cameras/: debug_camera_controller.cpp  module.cpp
util/: emoji.js  format.js  interact.js  responseFail.js
wiki/: index.md  vulkan.md
